--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@shopify/polaris": "^13.9.5",
     "@shopify/polaris-icons": "^9.3.1",
     "@vercel/postgres": "^0.9.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
     "pg": "^8.16.3",
     "react": "^18.3.0",
@@ -27,18 +30,16 @@
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.0",
     "uuid": "^10.0.0",
-    "zod": "^3.23.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.12.0",
     "@types/pg": "^8.15.6",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
@@ -50,4 +51,3 @@
     "node": ">=18.17.0"
   }
 }
-
