--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "shopify:dev": "shopify app dev"
   },
   "dependencies": {
+    "@preact/signals": "^2.3.2",
     "@shopify/app-bridge": "^3.7.10",
     "@shopify/app-bridge-react": "^4.2.7",
     "@shopify/polaris": "^13.9.5",
     "@shopify/polaris-icons": "^9.3.1",
+    "@shopify/shopify-api": "^12.1.1",
+    "@shopify/ui-extensions": "2025.10.7",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
@@ -25,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
     "pg": "^8.16.3",
+    "preact": "^10.27.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.66.0",
