feat: Add SMTP support (Gmail/Outlook) as alternative to Resend
- Add nodemailer for SMTP support
- Support both SMTP and Resend with automatic fallback
- SMTP tries first, then Resend if SMTP fails or not configured
- Add comprehensive Gmail SMTP setup guide
- Allows email sending without domain verification

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@shopify/polaris-icons": "^9.3.1",
     "@shopify/shopify-api": "^12.1.1",
     "@shopify/ui-extensions": "2025.10.7",
+    "@types/nodemailer": "^7.0.3",
     "@vercel/postgres": "^0.9.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
@@ -27,6 +28,7 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "preact": "^10.27.2",
     "react": "^18.3.0",
