--- a/extensions/friends-family-customer-account/shopify.extension.toml
+++ b/extensions/friends-family-customer-account/shopify.extension.toml
@@ -1,5 +1,5 @@
 # Learn more about configuring your Customer account UI extension:
-# https://shopify.dev/api/customer-account-ui-extensions/unstable/configuration
+# https://shopify.dev/docs/api/customer-account-ui-extensions/unstable/configuration
 
 # The version of APIs your extension will receive. Learn more:
 # https://shopify.dev/docs/api/usage/versioning
@@ -12,7 +12,7 @@ type = "ui_extension"
 uid = "5ce5d4b6-2b3d-dac3-010d-de6bd82234a299b77e48"
 
 # Controls where in Shopify your extension will be injected,
-# and the file that contains your extension’s source code. Learn more:
+# and the file that contains your extension's source code. Learn more:
 # https://shopify.dev/docs/api/customer-account-ui-extensions/unstable/extension-targets-overview
 
 [[extensions.targeting]]
@@ -20,8 +20,13 @@ module = "./src/ProfileBlock.jsx"
 target = "customer-account.profile.block.render"
 default_placement = "PROFILE1"
 
+[[extensions.targeting]]
+module = "./src/ProfileBlock.jsx"
+target = "customer-account.order-index.block.render"
+default_placement = "PAGE_TITLE"
+
 [extensions.capabilities]
-# Gives your extension access to directly query Shopify’s storefront API.
+# Gives your extension access to directly query Shopify's storefront API.
 # https://shopify.dev/docs/api/customer-account-ui-extensions/unstable/configuration#api-access
 api_access = true
 
